# OpenGL-projects

./: README.md  sierpinski_triangle.cpp
exhibition_room/: CMakeLists.txt  Makefile  MyCylinder.cpp  Plane.cpp  RayTracer.cpp  Sphere.h  cylinder.cpp  cylinder.h  exhibition_room.out  main.cpp  main.h  plane.cpp  plane.h  ray.cpp  ray.h  scene_object.cpp  scene_object.h  sphere.cpp  sphere.h  textureBMP.cpp
ray_tracer/: CMakeCache.txt  MyCylinder.h  Ray.cpp  Sphere.cpp  cmake_install.cmake
synchronized_animation/: CMakeLists.txt  a.out  ball.tga  cylinders.tga  floor.tga  hangers.tga  pendulum.cpp  spinning_sphere.tga  wall.tga
